# oum-worker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
configs/: onceuponme.example.json  oum-worker.example.json
docs/superpowers/plans/: 2026-05-08-codex-engine-support.md  2026-05-08-oum-worker-generic-session-cli.md
docs/superpowers/specs/: 2026-05-08-codex-engine-support-design.md  2026-05-08-oum-worker-generic-session-cli-design.md
scripts/: oum-schedule  oum-worker  oum_schedule.py
scripts/oum_worker/: __init__.py  cli.py  codex_jsonl.py  config.py  engines.py  jsonl.py  launchd.py  runner.py  state.py  tmux.py
skills/oum-schedule/: SKILL.md
skills/oum-worker/: SKILL.md
tests/: test_oum_schedule.py  test_oum_worker_cli.py  test_oum_worker_codex_jsonl.py  test_oum_worker_config.py  test_oum_worker_engines.py  test_oum_worker_jsonl.py  test_oum_worker_launchd.py  test_oum_worker_runner.py  test_oum_worker_state.py  test_oum_worker_tmux.py
tests/fixtures/oum_worker/: codex_simple.jsonl  codex_with_tools.jsonl  conversation_simple.jsonl  conversation_with_tools.jsonl
